# viperx

./: .coverage  .gitignore  404.html  CHANGELOG.md  GEMINI.md  PHILOSOPHY.md  ROADMAP.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  viperx.yaml
.github/workflows/: deploy.yml
changelog/: index.html
cli-reference/: index.html
configuration/: index.html
contributing/: index.html
docs/: changelog.md  cli-reference.md  configuration.md  contributing.md  index.md  installation.md  learning-path.md  publishing.md  quickstart.md  templates.md  workspaces.md
docs/learn/: config.md  index.md  packaging.md  structure.md  testing.md  uv.md
docs/why/: config-in-package.md  env-isolation.md  index.md  pyproject.md  safe-mode.md  src-layout.md  uv.md
installation/: index.html
learn/: index.html
learn/config/: index.html
learn/packaging/: index.html
learn/structure/: index.html
learn/testing/: index.html
learn/uv/: index.html
packaging/aur/: .SRCINFO  PKGBUILD  README.md
packaging/homebrew/: README.md  viperx.rb
publishing/: index.html
quickstart/: index.html
sandbox/: viperx.yaml
sandbox/test-classic/: LICENSE  README.md  pyproject.toml  viperx.yaml
sandbox/test-classic/notebooks/: Base_General.ipynb  Base_Kaggle.ipynb
sandbox/test-classic/src/preprocess/: README.md  __init__.py  config.yaml  main.py  pyproject.toml
sandbox/test-classic/src/preprocess/preprocess/: config.py
sandbox/test-classic/src/proprocess/: README.md  pyproject.toml
sandbox/test-classic/src/proprocess/proprocess/: __init__.py
sandbox/test-classic/src/test_classic/: __init__.py  config.py  config.yaml  data_loader.py  main.py
sandbox/test-ml/: README.md  pyproject.toml  viperx.yaml
sandbox/test-ml/notebooks/: Base_General.ipynb  Base_Kaggle.ipynb
sandbox/test-ml/src/preprocess/: main.py
sandbox/test-ml/src/proprocess/: main.py
sandbox/test-ml/src/test_ml/: __init__.py  config.py  data_loader.py  main.py
sandbox/test_classic/: .gitignore  LICENSE  README.md  pyproject.toml  viperx.yaml
sandbox/test_classic/src/preprocess/: README.md  __init__.py  config.py  config.yaml  pyproject.toml
sandbox/test_classic/src/process/: README.md  config.py  config.yaml  main.py  pyproject.toml
sandbox/test_classic/src/proprocess/: .env  README.md  __init__.py  config.py  main.py  pyproject.toml
sandbox/test_classic/src/test_classic/: config.py  config.yaml  main.py
sandbox/test_classic/test_ml/: pyproject.toml  viperx.yaml
sandbox/test_classic/test_ml/notebooks/: Base_General.ipynb  Base_Kaggle.ipynb
sandbox/test_classic/test_ml/src/preprocess/: pyproject.toml
sandbox/test_classic/test_ml/src/proprocess/: pyproject.toml
sandbox/test_classic/test_ml/src/test_ml/: __init__.py  main.py
sandbox/test_ml/: README.md  pyproject.toml  viperx.yaml
sandbox/test_ml/src/preprocess/: main.py  pyproject.toml
sandbox/test_ml/src/test_ml/: config.py  config.yaml
search/: search_index.json
src/viperx/: config_scanner.py  core.py  explanations.py  main.py  resources.py  templates.py
src/viperx/templates/: .gitignore.j2  README.md.j2  config.py.j2  main.py.j2  pyproject.toml.j2
src/viperx/tests/functional/: test_templates.py
templates/: index.html
test-config-proj/: README.md  pyproject.toml
test-config-proj/core-lib/: pyproject.toml
test-config-proj/core-lib/src/core_lib/: __init__.py  config.py  config.yaml  main.py
test-config-proj/src/test_config_proj/: __init__.py  config.py  config.yaml  main.py
workspaces/: index.html
