[project]
name = "test-config-proj"
version = "0.1.0"
description = "A robust project built with ViperX"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "kagglehub>=0.2.0",
    
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/test_config_proj"]

[tool.hatch.build.targets.wheel.force-include]
"src/test_config_proj/config.yaml" = "test_config_proj/config.yaml"


[tool.uv]
managed = true


[tool.uv.workspace]
members = ["core-lib"]
