[project]
name = "test-classic"
version = "0.1.0"
description = "test-classic"

readme = "README.md"

requires-python = ">=3.13"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "kagglehub>=0.2.0",
    
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[tool.uv]
managed = true


[tool.uv.workspace]
members = ["src/preprocess", "src/proprocess"]
