[project]
name = "test-classic"
version = "0.1.0"
description = "test-classic"

readme = "README.md"

requires-python = ">=3.12"
authors = [
    { name = "Ivann KAMDEM", email = "kapoivha@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    
    "pyyaml>=6.0",
    
    
    "python-dotenv>=1.0.0",
    
    
    
]

[project.scripts]

test-classic = "test-classic.main:main"

preprocess = "preprocess.main:main"

proprocess = "proprocess.main:main"


[build-system]

# Default: uv native build backend
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"



[tool.uv]
managed = true


[tool.uv.workspace]
members = ["src/preprocess", "src/proprocess"]
