[project]
name = "test-classic"
version = "0.1.0"
description = "test classic project"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [ "pyyaml>=6.0", "python-dotenv>=1.0.0",]
[[project.authors]]
name = "KpihX"
email = "kapoivha@gmail.com"

[build-system]
requires = [ "uv_build>=0.9.21,<0.10.0",]
build-backend = "uv_build"

[project.license]
text = "MIT"

[project.scripts]
test-classic = "test_classic.main:main"
preprocess = "preprocess.main:main"
proprocess = "proprocess.main:main"
