[project]
name = "test-classic"
version = "0.1.0"
description = "test-classic"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Ivann KAMDEM", email = "kapoivha@gmail.com" }
]
license = { text = "Apache-2.0" }
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0"
]

[project.scripts]
test-classic = "test_classic.main:main"
preprocess = "preprocess.main:main"
proprocess = "proprocess.main:main"

[build-system]
# Default: uv native build backend
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1"
]

[tool.pytest.ini_options]
testpaths = [
    "src/test_classic/tests",
    "src/test_classic/tests",
    "src/preprocess/tests",
    "src/proprocess/tests"
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')"
]

