[project]
name = "core-lib"
version = "0.1.0"
description = "Core utilities shared across project"
readme = "README.md"
requires-python = ">=3.11"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "kagglehub>=0.2.0",
    
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/core_lib"]

[tool.hatch.build.targets.wheel.force-include]
"src/core_lib/config.yaml" = "core_lib/config.yaml"


[tool.uv]
managed = true

