[project]
name = "preprocess"
version = "0.1.0"
description = "processing utilities"

readme = "README.md"

requires-python = ">=3.13"
authors = [
    { name = "Your Name", email = "your.email@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "kagglehub>=0.2.0",
    
]

[build-system]

# Default: uv native build backend
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"



[tool.uv]
managed = true

