[project]
name = "preprocess"
version = "0.1.0"
description = "processing utilities"

requires-python = ">=3.11"
authors = [
    { name = "Ivann KAMDEM", email = "kapoivha@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
]

[project.scripts]
preprocess = "preprocess.main:main"

[build-system]

# Default: uv native build backend
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"


