[project]
name = "preprocess"
version = "0.1.0"
description = "processing utilities"
requires-python = ">=3.11"
authors = [
    { name = "Ivann KAMDEM", email = "kapoivha@gmail.com" }
]
license = { text = "MIT" }
dependencies = [
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "kagglehub>=0.2.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "requests>=2.30.0",
    "tqdm>=4.65.0",
]

[project.scripts]
test-ml = "test_ml.main:main"
preprocess = "preprocess.main:main"
proprocess = "proprocess.main:main"

[build-system]
# Default: uv native build backend
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"

